<resources>
    <string name="app_name">Mpay</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Login</string>

    <string name="validationUsername">Username is not valid</string>
    <string name="validationPassword">Password is not valid</string>

    <string name="more">Lihat Semua</string>

    <string name="title_home">PPOB</string>
    <string name="menu">Merchant</string>

    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="icon">Icon</string>
    <string name="scan">Scan</string>
    <string name="mp_id">M Pay ID</string>
    <string name="transfer">Berita transfer</string>
    <string name="top_up">Top Up</string>
    <string name="rp">Rp</string>
    <string name="saldo_cash">SALDO CASH</string>
    <string name="ovo">OVO</string>
    <string name="grab">GRAB</string>
    <string name="go_pay">GO-Pay</string>
    <string name="pulsa_pascabayar">Pulsa Pascabayar</string>
    <string name="tv_kabel_dan_speedy">TV kabel dan Speedy</string>
    <string name="pulsa">Pulsa</string>
    <string name="pln">PLN</string>
    <string name="dana">DANA</string>
    <string name="asuransi">Asuransi</string>
    <string name="bpjs">BPJS</string>
    <string name="finance">Finance</string>
    <string name="payment">Payment</string>
    <string name="e_money_mandiri">E-Money Mandiri</string>
    <string name="tap_cash_bni">Tap Cash BNI</string>
    <string name="pdam">PDAM</string>
    <string name="pln_pascabayar">PLN Pascabayar</string>
    <string name="tiket">Tiket</string>
    <string name="default_value">0</string>
    <string name="member">Member</string>
    <string name="qr_code">QR Kode</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="nominal">Nominal Transfer</string>
    <string name="nominalBank">Nominal Withdraw</string>
    <string name="register">Register</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="no_telfon_yang_terpasang_di_hp_anda">No Telepon yang terpasang di Hp anda</string>
    <string name="nama_sesuai_ktp">Nama sesuai KTP</string>
    <string name="password_validation">Ulang kata sandi</string>
    <string name="email_aktif_saat_ini">Email aktif saat ini</string>
    <string name="kirim_code">Kirim Kode</string>
    <string name="code_verifikasi_no_telfon">Kode verifikasi no telfon</string>
    <string name="daftar">Daftar</string>
    <string name="pin">Pin</string>
    <string name="kirim_pin">Kirim Pin</string>
    <string name="update_password">Ubah kata Sandi</string>
    <string name="password_baru_anda">Password baru anda</string>
    <string name="validasi_password_baru_anda">Validasi password baru anda</string>
    <string name="history">History</string>
    <string name="password_6_digit">kata sandi (harus 6 digit)</string>
    <string name="paket_data">Paket Data</string>
    <string name="teruskan">Teruskan</string>
    <string name="kembali">Kembali</string>
    <string name="beli">Beli</string>
    <string name="post_paid_100">100</string>
    <string name="markup_admin">Fee</string>
    <string name="sisa_saldo">Sisa Saldo</string>
    <string name="saldo_awal">Saldo Awal</string>
    <string name="harga">Harga</string>
    <string name="konfrimasi_pembayaran">Konfrimasi Pembayaran</string>
    <string name="id_pelanggan">Id Pelanggan</string>
    <string name="post_paid_credit_2500">2500</string>
    <string name="biyaya_admin">Biyaya Admin</string>
    <string name="periode_tagihan">Periode Tagihan</string>
    <string name="jenis_pembelian">Jenis Pembelian</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="nomor_meter">Nomor Meter</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="transfer_ke_bank">Withdraw ke BANK</string>
    <string name="transfer_sesama_m_pay">Transfer Sesama M Pay</string>
    <string name="keterangan">Keterangan</string>
    <string name="bank_tujuan">Bank Tujuan</string>
    <string name="nomor_ponsel_anda">Nomor Ponsel anda</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="nama_sesuai_akun_bank">Nama Sesuai Akun BANK</string>
    <string name="nama_printer">Nama Printer :</string>
    <string name="pilih_printer_bluetooth">Pilih Printer bluetooth</string>
    <string name="masukkan_kata_sandi">Masukkan Pin/Kata Sandi</string>
    <string name="transfers">Transfer</string>
    <string name="transfersBank">Withdraw</string>
    <string name="upload">Upload</string>
    <string name="foto_ktp_dan_diri_seperti_gambar">Foto KTP Dan Diri Seperti Gambar</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="support">Support Transaksi PPOB</string>
    <string name="nominal_send">Nominal</string>
    <string name="convert_rek_point_mdp">Convert Rek Point MDP</string>
</resources>
