<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mp.user.UploadImageActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foto_ktp"
            android:textAlignment="center"
            android:textColor="@color/Dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ktp"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/icon"
            app:srcCompat="@drawable/ktp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foto_ktp_dan_diri_seperti_gambar"
            android:textAlignment="center"
            android:textColor="@color/Dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ktpAndUser"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/icon"
            app:srcCompat="@drawable/foto_diri_ktp" />

        <Button
            android:id="@+id/uploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_success"
            android:textColor="@color/textPrimary"
            android:text="@string/upload" />

    </LinearLayout>

</ScrollView>
