<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mp.user.menu.mpay.MPayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phoneNumberTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/Success"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:drawableTint="@color/Success"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/Success"
            android:textColorHint="@color/colorSecondaryLight"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/nominal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/Success"
            android:drawableStart="@drawable/ic_fiber_smart_record_black_24dp"
            android:drawableTint="@color/Success"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nominal"
            android:inputType="numberSigned"
            android:textColor="@color/Success"
            android:textColorHint="@color/colorSecondaryLight"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="Autofill,UnusedAttribute" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/Success"
            android:drawableStart="@drawable/ic_description_black_24dp"
            android:drawableTint="@color/Success"
            android:ems="10"
            android:hint="@string/keterangan"
            android:inputType="textPersonName"
            android:textColor="@color/Success"
            android:textColorHint="@color/colorSecondaryLight"
            tools:ignore="Autofill,UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/codeValidation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/Success"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:drawableTint="@color/Success"
                android:ems="10"
                android:hint="@string/code_verifikasi_no_telfon"
                android:inputType="numberDecimal"
                android:textColor="@color/Success"
                android:textColorHint="@color/textSecondary"
                tools:ignore="Autofill,LabelFor,UnusedAttribute" />

            <Button
                android:id="@+id/sendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_info"
                android:text="@string/kirim_code"
                android:textColor="@color/textPrimary" />

        </LinearLayout>

        <Button
            android:id="@+id/transferButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_success"
            android:text="@string/transfers"
            android:textColor="@color/textPrimary" />

    </LinearLayout>

</ScrollView>
