<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mp.password.update.UpdatePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/Success"
            android:drawableTint="@color/Success"
            android:ems="10"
            android:hint="@string/password_baru_anda"
            android:inputType="numberPassword"
            android:textColor="@color/Success"
            android:textColorHint="@color/colorSecondaryLight"
            tools:ignore="Autofill,UnusedAttribute" />

        <EditText
            android:id="@+id/newPasswordValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/Success"
            android:drawableTint="@color/Success"
            android:ems="10"
            android:hint="@string/validasi_password_baru_anda"
            android:inputType="numberPassword"
            android:textColor="@color/Success"
            android:textColorHint="@color/colorSecondaryLight"
            tools:ignore="Autofill,UnusedAttribute" />

        <Button
            android:id="@+id/updatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/button_success"
            android:text="@string/update_password"
            android:textColor="@color/textPrimary" />

    </LinearLayout>

</ScrollView>
